# Cornerstone

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  biome.json  dev-requirements.txt  eslint.config.js  index.html  jsconfig.json  package.json  pyproject.toml  requirements.txt  start.py  vite.config.js
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: Default.md
.zed/: README.md  keymap.json  languages.json  settings.json
app/: __init__.py  api.py  config.py  database.py  models.py
app/__tests__/: test_api.py
commands/: build-backend.js  build-pyinstaller.py  setup-dev.js  start-dev.js
cypress/: jsconfig.json
ui/: App.vue  main.js  router.js
ui/__tests__/: App.spec.js
ui/components/: BreadcrumbNavigation.vue
ui/composables/classes/: character.js
ui/pages/: PCharacter.vue  PMain.vue  PTemplates.vue
