[project]
name = "cornerstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle==0.13.4",
    "cfgv==3.5.0",
    "distlib==0.4.0",
    "filelock==3.20.1",
    "identify==2.6.15",
    "iniconfig==2.3.0",
    "nodeenv==1.9.1",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "pre-commit==4.5.0",
    "proxy-tools==0.1.0",
    "psutil==7.1.3",
    "pygments==2.19.2",
    "pyobjc-core==12.1",
    "pyobjc-framework-cocoa==12.1",
    "pyobjc-framework-quartz==12.1",
    "pyobjc-framework-security==12.1",
    "pyobjc-framework-uniformtypeidentifiers==12.1",
    "pyobjc-framework-webkit==12.1",
    "pytest==9.0.2",
    "pywebview==6.1",
    "pyyaml==6.0.3",
    "ruff==0.14.9",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "virtualenv==20.35.4",
]
