[project]
name = "cornerstone"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs==4.5.0",
    "psutil==7.1.3",
    "pywebview==6.1",
    "sqlalchemy==2.0.44",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ruff==0.14.9",
    "pre-commit==4.5.0",
    "pyinstaller>=6.17.0",
]
